# pi-ticket-flow

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json
.ticket-flow/: AGENTS.md
.tickets/: ptf-12ms.md  ptf-7o9t.md  ptf-gm5j.md  ptf-gmdx.md  ptf-owdn.md  ptf-u9jj.md  ptf-ykcc.md  ptf-yopv.md  ptf-yozb.md  ptf-z0n9.md
agents/: change-planner.md  researcher.md  rw-reviewer.md  rw-smoke.md  rw-worker.md  ticket-reviewer.md  ticket-smoke.md  ticket-worker.md
docs/: README.md
extensions/: bridge-message-utils.ts  delegated-execution-policy.ts  delegated-subagent-outcome.ts  interactive-session-artifacts.ts  interactive-subagents-detection.ts  interactive-subagents-tools.ts  prompt-template-interactive-bridge.ts  register-rw-agents.ts  register-ticket-agents.ts  ticket-flow-delegated-recovery.ts  ticket-flow-tools.ts
prompts/: architect.md  brainstorm.md  bridge-smoke.md  document.md  plan-and-build.md  plan-chain.md  plan-create.md  plan-improve.md  plan.md  refactor-deep.md  refactor.md  review-deep-consolidate.md  review-deep-correctness.md  review-deep-regression.md  review-deep-tests.md  review-deep.md  review-fix-chain.md  review-fix.md  review.md  rw-finalize.md  rw-implement.md  rw-mark-review.md  rw-pick.md  rw-reset.md  rw-review.md  rw-step.md  rw-ticket-chain.md  rw-ticket-direct.md  rw-ticket.md  simplify-deep.md  simplify.md  test-fix.md  ticket-direct.md  ticket-finalize.md  ticket-flow.md  (+23 more)
python/: README.md  pyproject.toml
python/tk_ui/: __init__.py  __main__.py  app.py  path_resolution.py  styles.tcss
(+45 files in other folders)
